# DeUber

./: .autotools  .cproject  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  DeUber.files  DeUber.includes  README.md
data/: config  config.txt  database.s3db  menu.dg
data/cars/: car_list1.txt
data/maps/: ej1.map  ej2.map  ej3.map  example7.map  map_prueba.map
doc/: Installation.md  README.md  TODO.md
game_motor/: CMakeLists.txt
game_motor/include/: game_component.h  texture_manager.h
game_motor/include/ECS/: ECS.h  EntityManager.h  animation.h  asset_manager.h
game_motor/include/ECS/components/: car_component.h  collision_component.h  components.h  goal_component.h  random_movement_component.h  sprite_component.h  tile_component.h  transform_component.h
game_motor/include/ECS/objects/: car_entity.h  goal_entity.h  tile_entity.h
game_motor/src/: game_component.cpp  texture_manager.cpp
game_motor/src/ECS/: ECS.cpp  EntityManager.cpp  asset_manager.cpp
gui/: mainwindow.ui
include/: error_coding.h  game_man.h  global.h  menu.h  run_handler.h  running_info.h  running_menu.h
include/algorithms/: BFS_algorithm.h  algorithm_helper.h  generic_algorithm.h  random_algorithm.h
include/database/: dbManager.h
include/maps/: car.h  goal.h  map.h  map_errors.h
include/util/ds/: string_graph.h
include/util/file/: config_handler.h
include/util/strings/: strings_c.h  strings_cpp.h
include/visual/: game_component.h  login.h  main_menu.h  map_selector.h  visual_run_handler.h
include/visual/components/: car_component.h  goal_component.h
include/visual/objects/: car_entity.h  goal_entity.h  (+1 more)
lib/: CMakeLists.txt
lib/CWman/: CMakeLists.txt
lib/CWman/include/: CBorder.h  CComponent.h  CDimension.h  CFont.h  CGlobal.h  CMouse.h  CUI.h  CWindow.h
lib/CWman/include/component/: CAbstractButton.h  CBar.h  CButton.h  CLabel.h  CPanel.h  CScrollPanel.h  CTextBox.h  CToggleButton.h
lib/CWman/include/layout/: AbsoluteLayout.h  BorderLayout.h  FlowLayout.h  VerticalFlowLayout.h  WindowLayout.h  absolute_layout.h  border_layout.h  vertical_flow_layout.h  window_layout.h
lib/CWman/include/meta/: CDimension.h  CTextProperties.h
lib/CWman/include/misc/: CBorder.h  CFont.h
lib/CWman/include/utils/: SDL2_conv.h  collision.h  colors.h  keyboard.h
lib/CWman/src/: CMouse.cpp  CWindow.cpp  window_test.cpp
lib/CWman/src/component/: CComponent.cpp
lib/CWman/src/layout/: AbsoluteLayout.cpp  BorderLayout.cpp  FlowLayout.cpp  VerticalFlowLayout.cpp  absolute_layout.cpp  border_layout.cpp  vertical_flow_layout.cpp
lib/CWman/src/meta/: CDimension.cpp  CTextProperties.cpp
lib/Catch2/: CMakeLists.txt
lib/SDL2/: CMakeLists.txt
lib/TGMApp/: CMakeLists.txt
lib/TGMApp/include/: game_component.h
lib/TGMApp/src/: game_component.cpp
lib/TGMotor/: CMakeLists.txt
lib/TGMotor/include/: g_constants.h  game.h  game_map.h  renderer.h  stage.h  texture_manager.h  vector2d.h
lib/TGMotor/include/ECS/: ECS.h  animation.h  asset_manager.h  entity_gen.h  entity_manager.h  keyboard_controller.h
lib/TGMotor/include/ECS/Components/: collision_component.h  component_helper_t.h  sprite_component.h  transform_component.h
lib/TGMotor/include/physics/: collision.h
lib/TGMotor/include/utils/: files.h
lib/TGMotor/include/visual/: FrameVisualizator.h  GameVisualizator.h
lib/TGMotor/src/: g_constants.cpp  game.cpp  game_map.cpp  main.cpp  renderer.cpp  texture_manager.cpp
lib/TGMotor/src/ECS/: ECS.cpp  asset_manager.cpp  entity_manager.cpp
lib/TGMotor/src/ECS/Components/: collision_component.cpp  sprite_component.cpp  transform_component.cpp
lib/TGMotor/src/physics/: collision.cpp
lib/TGMotor/src/utils/: files.cpp
lib/game_motor/: CMakeLists.txt
lib/nlohmann/: CMakeLists.txt
lib/plog/: CMakeLists.txt
lib/window_manager/: CMakeLists.txt
lib/window_manager/include/component/: component_button.h  component_label.h  component_list.h  window_component.h
lib/window_manager/include/layout/: vertical_flow_layout.h
lib/window_manager/res/templates/: component_template.h
res/assets/: asset_list  taxi.lst  tile-floor.lst
res/entities/: goal.per  taxi.per  tile-building.per  tile-floor.per
res/tiles/: tile_b
scripts/: README.md  map_generator.py
scripts/map_generator/: map_generator.py
scripts/map_simulator/: map.py
scripts/notebooks/: FirstExecution.ipynb  MapGenerator.ipynb
src/: error_coding.c  error_coding.h  global.h  main.cpp  menu.c  menu.h  run_handler.cpp  run_handler.h  running_info.h  running_menu.cpp  running_menu.h  software_launcher.cpp  software_launcher.h
src/DeUber/: CMakeLists.txt
src/DeUber/data/: menu.dg
src/DeUber/data/maps/: ej1.map  mapaWrite.map
src/DeUber/src/: global.h  main.cpp  menu.c  menu.h
src/DeUber/src/cars/: car.cpp  car.h
src/DeUber/src/database/: dbManager.c  dbManager.cpp
src/DeUber/src/maps/: map.cpp  map.h
src/DeUber/src/util/ds/: string_graph.c  string_graph.h
src/DeUber/src/util/file/: config_handler.h
src/DeUber/src/util/strings/: strings_c.c  strings_c.h
src/DeUber/tests/maps/: map_test.cpp
src/Logs/: Dijkstra.cpp
src/algorithms/: BFS_algorithm.h  algorithm_helper.h  algorithm_type.h  generic_algorithm.h  random_algorithm.h
src/database/: dbManager.c  dbManager.cpp
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/maps/: car.cpp  car.h  goal.h  map.cpp  map.h  map_errors.h
src/visual/: game_component.cpp  login.cpp  main_menu.cpp  map_selector.cpp  texture_manager.cpp  texture_manager.h  vector2d.h  visual_run_handler.cpp  visual_run_handler.h
tests/maps/: map_test.cpp
window_manager/: CMakeLists.txt
window_manager/include/: window_handler.h
window_manager/include/component/: component_button.h  component_list.h  panel_component.h  window_component.h
window_manager/include/layout/: absolute_layout.h  border_layout.h  vertical_flow_layout.h  window_layout.h
window_manager/src/: main.cpp  window_handler.cpp
window_manager/src/component/: window_component.cpp
window_manager/src/layout/: absolute_layout.cpp  vertical_flow_layout.cpp
(+28 files in other folders)
